...
        android:layout_marginTop="8dp"
        android:text="@string/duration_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/delete_bttn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="236dp"
        android:layout_marginTop="8dp"
        android:text="@string/remove_bttn_text"
        app:layout_constraintStart_toStartOf="parent"
...
