<resources>
    <string name="app_name">PAJAAppFinal</string>
    <string name="open_deezer">Open Deezer</string>
    <string name="open_recipe">Open Recipe</string>
    <string name="open_dictionary">Open Dictionary</string>
    <string name="open_sunseeker">Open SunSeeker</string>
  
<!--Strings for Alessandra Project-->
    <string name="recipe_delete_all_button">Delete All</string>
    <string name="recipe_save_to_favorites">Save to Favorites</string>
    <string name="recipe_welcome_to">Welcome to \nRecipe Search</string>
    <string name="recipe_search_for_a_">Search for a recipe</string>
    <string name="recipe_search">Search</string>
    <string name="recipe_list_my_favorites">List my Favorites</string>
    <string name="recipe_id">Recipe ID:</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="recipe_delete_all_question">Delete All Recipes</string>
    <string name="recipe_delete_sure_question">Are you sure you want to delete all recipes from favorites?</string>
    <string name="recipe_delete_confirmation">All favorite recipes were deleted</string>
    <string name="recipe_undo">Undo</string>
    <string name="recipe_no_decision">No</string>
    <string name="recipe_yes_decision">Yes</string>
    <string name="recipe_invalid">Invalid recipe</string>
    <string name="recipe_error_parsing_details">Error parsing recipe details</string>
    <string name="recipe_error_fetching_details">"Error fetching recipe details: "</string>
    <string name="recipe_saved_to_favorites">Recipe saved to favorites</string>
    <string name="recipe_already_saved">Recipe is already saved to favorites</string>
    <string name="recipe_about_app">About the App</string>
    <string name="recipe_instructions">Easily search for delicious recipes using keywords. Browse through a variety of recipes, view details, and save your favorites ones for quick access using My favorites button</string>
    <string name="recipe_got_it">Got it</string>
    <string name="recipe_keyword_for_search">Please enter a keyword for search</string>
    <string name="recipes_not_found">No recipes found for \'</string>
    <string name="recipe_saved_to_sharedpreferences">Text saved to SharedPreferences</string>
<!--End of Strings for Alessandra Project-->


    <string name="song_title_text_2">Song Search</string>

    <string name="title_activity_sunrise_time_page">SunriseTimePage</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

<!--Strings for Allan Project-->
    <string name="song_title_text_3">Welcome to Song Search</string>
    <string name="search_text">Search for Artist</string>
    <string name="search_hint_text">Search here for the artist</string>
    <string name="results">Results</string>
    <string name="duration">Duration</string>
    <string name="song_title">Title</string>
    <string name="track_position">Track</string>
    <string name="favorite_text">Favorites</string>
    <string name="track_position_text">Track</string>
    <string name="song_title_text">Title</string>
    <string name="duration_text">Duration</string>
    <string name="remove_bttn_text">Delete</string>
    <string name="welcome_to_nrecipe_search">Welcome to\nRecipe Search</string>
    <string name="search_for_a_recipe">Search for a recipe</string>
    <string name="button_to_search_for_a_recipe">Button to search for a recipe</string>
    <string name="about_text">About</string>
    <string name="song_erro_search_text">Insert an artist to search!</string>
    <string name="song_erro_json">Error parsing JSON</string>
    <string name="song_welcome_text">Welcome to Song Search</string>
    <string name="song_message_add_favorite">Would you like to save this song to your favorites list?</string>
    <string name="song_title_question_add_favorite">Add to favorites:</string>
    <string name="no_tex">No</string>
    <string name="yes_text">Yes</string>
    <string name="song_confirmation_add">Song added to favorites</string>
    <string name="song_erro_add_favorite">Error adding song to favorites</string>
    <string name="song_title_delete">Confirm Delete</string>
    <string name="song_question_delete_favorite">Are you sure you want to delete this song?</string>
    <string name="song_erro_delete_song_favorite">Error removing song to favorites</string>
    <string name="song_delete_message">"Song deleted: "</string>
    <string name="song_cancel">Cancel</string>
    <string name="search_text_button">SEARCH</string>
    <string name="album_information_text">Album Information</string>
    <string name="song_help">Help</string>
    <string name="song_about_message">Developed by Allan Torres. Version 1.0</string>
    <string name="song_instruction">"Search:\n"
"1. Enter an artist name then hit search.\n"
"2. Select an artist to display their albums.\n"
"3. Select an album for more details.\n"
"4. Click on a song to add to favorite list.\n\n"
"Access favorites list:\n"
"1. Click on the icon in the top right corner.\n"
"2. A list of your favorite songs will be displayed.\n"
"3. Click on the song from the list for more details.\n\n"
"Delete from Favorites:\n"
"1. Access favorite list.\n"
"2. Click delete to remove a song from favorites."
      <!--End of Strings for Allan Project-->
      
</string>
    <string name="song_instruction_title">Instructions</string>

    <!-- Peace's strings -->
    <string name="welcome_dic">Welcome to the PAJA Dictionary</string>
    <string name="word_hint_dic">Search up a word</string>
    <string name="famous_quote_dic">Words, like nature, half reveal and half conceal the soul within</string>
    <string name="tool_search_result">Your Search Result</string>
    <string name="save_term_dic">Save Word</string>
    <string name="view_term_dic">View Saved Words</string>
    <string name="tool_saved_dic">Saved Words</string>
    <string name="delete_saved_dic">Delete</string>
    <string name="help_title_dic">Help</string>
    <string name="help_message_dic">Instructions for using the interface:\n\n1. Enter a word to search in the provided field.\n2. Click on the search button to retrieve definitions and you can also save the word.\n3. Click on view saved words button to see saved words, tap on saved words for more info and for deletion.</string>
    <string name="ok_button_text_dic">OK</string>

    <!--sunrise's string-->
    <string name="sunSeeker">SunSeeker</string>
    <string name="view_favorites_button">Show Favorite list</string>
    <string name="switchText">Enter Lat and Lon : </string>
    <string name="lookupButton">LOOKUP</string>


</resources>